syntax = "proto3";
package cdaysdemo.v1;
option go_package = "generated/go/cdaysdemo/v1";


import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "buf/validate/validate.proto";

// Lets have html pages from proto for an index.html

message GetPageRequest {
  string web_page = 1;
}

// Here is a standard REST JSON response we might expect from transcoding

//TODO


// Add a file_name with validation, so we can return file content and stream it

message StringMessage {
  string file_name = 1 [(buf.validate.field).required = true];
}

service DemoService {
  rpc GetWebPage(GetPageRequest) returns (google.api.HttpBody) {
    option (google.api.http) = {
      get: "/v1/page/{web_page}"
    };
  }

  rpc GetCSVFile(StringMessage) returns (google.api.HttpBody) {
    option (google.api.http) = {
        get : "/v1/plain/{file_name}"
    }; 
  }

  rpc StreamCSVFile(StringMessage) returns (stream google.api.HttpBody) {
    option (google.api.http) = {
        get : "/v1/stream/{file_name}"
    }; 
  }
}